# lct_dendrology

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  run_tests.py
docs/: INFERENCE_INTEGRATION.md
examples/: run_bot.py  run_server.py  test_yolo.py
lct_dendrology/: __init__.py
lct_dendrology/backend/: __init__.py  image_processor.py  server.py
lct_dendrology/bot/: bot.py
lct_dendrology/cfg/: __init__.py  settings.py
lct_dendrology/inference/: __init__.py  yolo_classifier.py  yolo_detector.py  yolo_inference.py
lct_dendrology/training/: __init__.py  classify_crops_with_openai.py  classify_crops_with_openai_2.py  classify_crops_with_openai_3.py  split_dataset.py
scripts/: README.md  download_models.sh  start_all.sh
tests/: __init__.py
tests/integration_tests/: test_integration_server.py
tests/unit_tests/: __init__.py  test_fastapi_server.py  test_image_processor.py  test_tg_bot.py  test_utils.py  test_yolo_classifier.py  test_yolo_detector.py  test_yolo_inference.py
